# RaspberryPico_DroneController

./: .gitignore  CMakeLists.txt  README.md
extras/: acquisizione.csv  analyzer.py  gyro.py  gyro_bias_z.txt  pico-uart-bridge-v4.1.uf2
extras/js/: motor_speed.html
extras/kicad/DroneControllerBoard/: DroneControllerBoard.kicad_pcb  DroneControllerBoard.kicad_prl  DroneControllerBoard.kicad_pro
extras/maintenance/: CMakeLists.txt
extras/maintenance/src/: HeadingDisplay.cpp  HeadingDisplay.h  Joystick.cpp  Joystick.h  JoystickBridge.cpp  JoystickBridge.h  MaintenanceGui.ui  MaintenanceWindow.cpp  MaintenanceWindow.h  PlotWidget.cpp  PlotWidget.h  RollPitchDisplay.cpp  RollPitchDisplay.h  main.cpp  maint.cpp  maint.h
extras/matlab/: data.mat  f450.m  f450_model.m  f450_torque.m  output.m  pid_controller.m  pid_new.m  radio_to_motor.m  rpmmodel.m
extras/pid-tuner/: CMakeLists.txt
extras/pid-tuner/src/: comthread.cpp  comthread.h  headingdisplay.h  joystick.cpp  joystick.h  jscontrol.h  main.cpp  menuwidget.cpp  menuwidget.h  proto.h  rollpitchdisplay.h  tunergui.ui  tunerwindow.cpp  tunerwindow.h
src/: attitude.cpp  attitude.h  bno055_interface.cpp  bno055_interface.h  cbit.cpp  cbit.h  imu_interface.cpp  imu_interface.h  joystick.cpp  joystick.h  lsm9ds1_interface.cpp  lsm9ds1_interface.h  main.cpp  maint.cpp  maint.h  motors.cpp  motors.h  mpu6050_interface.cpp  mpu6050_interface.h  pid.cpp  pid.h  timer.cpp  timer.h  uart.cpp  uart.h  uart0.cpp  uart0.h  user.cpp  user.h
src/drivers/bno055/: bno055.cpp  bno055.h
src/drivers/i2c_utils/: i2c_utils.cpp  i2c_utils.h  pio_i2c_utils.cpp  pio_i2c_utils.h
src/drivers/lsm9ds1/: LSM9DS1.cpp  LSM9DS1.h  LSM9DS1_Types.h
src/drivers/mpu6050/: mpu6050.cpp  mpu6050.h
src/drivers/pio/: i2c.pio  pio_i2c.c  pio_i2c.h
src/drivers/servo/: pulse.cpp  pulse.h  servo.cpp  servo.h
